--- a/templates/link.page.tmpl
+++ b/templates/link.page.tmpl
@@ -56,7 +56,7 @@
         <form id="sweet-alert-form" action="" method="post" novalidate class="needs-validation">
             <div class="form-row">
                 <div class="col">
-                    <div class="form-row" id="reservation-dates-modal">
+                    <div class="form-row" id="sweet-alert-modal">
                         <div class="col">
                             <input disabled required class="form-control" type="text" name="start" id="start" placeholder="Arrival">
                         </div>
@@ -71,6 +71,35 @@
         attention.custom({
             title: 'Choose your dates',
             msg: html,
+            willOpen: () => {
+                const elem = document.getElementById("sweet-alert-modal");
+                const rp = new DateRangePicker(elem, {
+                    format: 'yyyy-mm-dd',
+                    showOnFocus: true,
+                })
+            },
+            didOpen: () => {
+                document.getElementById("start").removeAttribute("disabled");
+                document.getElementById("end").removeAttribute("disabled");
+            },
+            callback: function(result) {
+                console.log("called");
+
+                let form = document.getElementById("sweet-alert-form");
+                let formData = new FormData(form);
+                formData.append("csrf_token", "{{.CSRFToken}}");
+
+                fetch('/link-json', {
+                    method: "post",
+                    body: formData,
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log(data);
+                        console.log(data.ok);
+                        console.log(data.message);
+                    })
+            }
         });
     })
 </script>
